package cascao.adapter;

public record Coordenada(double latitude, double longitude) {}
