package cascao.adapter;

public interface LocalizacaoService {
    double calcularDistancia(Coordenada origem, Coordenada destino);
}
